--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
     font-family:'Love Ya Like A Sister', cursive;
     color:#212121;
 }
-#aboutMeDiv, #aboutSkills, #aboutExperience{
+#aboutMeDiv, #aboutSkills, #aboutExperience, #aboutContacts{
     margin-top:5px;
     margin-bottom: 10px;
     background: #e4e2e2;
@@ -36,7 +36,9 @@ body {
     color: #212121;
     font-size: 20px;
 }
-
+#emailImg, #phoneImg, #linkedinImg{
+    opacity:0.5;
+}
 #portf {
     color: rgb(19, 18, 18);
     font-size: 60px;
@@ -51,6 +53,12 @@ body {
     color:#496d77;
     font-size:25px;
 }
+/* #aboutContacts {
+    background-image: url("../images/paperBackg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+   
+} */
 .googlefont1 {
     /* font-family: 'Gloria Hallelujah', cursive; */
     font-family: 'Love Ya Like A Sister', cursive;
@@ -74,7 +82,7 @@ li{
     color:black;
     font-size:22px;
 }
-h5 {
+h5, h3 {
     margin-top:30px;
     font-family: 'Love Ya Like A Sister', cursive;
 }
@@ -86,6 +94,15 @@ h5 {
 }
 #expBox{
     box-sizing: border-box;
+}
+#connect {
+    color:black;
+}
+.connectP{
+    color:black;
+    font-weight: bold;
+    font-size:20px;
+    font-family: 'Love Ya Like A Sister', cursive;
 }
 #expGirl{
     max-width:100%;
