--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,59 +6,24 @@ html {
 ::-webkit-scrollbar { 
     display: none; 
 }
-/* *{
-    box-sizing: border-box;
-} */
+
 body {
     background:#e4e2e2;
     color: #777777;
-    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
-    margin-bottom: 100px;
 }
+/* =======Parallax======== */
+
+.parallax-container {
+    height: 170px;
+}
+/*=============== Header ===============*/
 #firstParallax{
     height:65px;
 }
-/* #parallax2{
-    background:rgba(57, 100, 102, 0.685);
-} */
-#transpNav{
+
+#transpNav{ 
     background:#173539cb;
 }
-#aboutMe, #techSk, #portf{
-    font-family:'Love Ya Like A Sister', cursive;
-    color:#212121;
-}
-#aboutMeDiv, #aboutSkills, #aboutExperience, #aboutContacts{
-    margin-top:5px;
-    margin-bottom: 10px;
-    background: #e4e2e2;
-    padding-top:20px;
-    color: #212121;
-    font-size: 20px;
-}
-#emailImg, #phoneImg, #linkedinImg{
-    opacity:0.5;
-}
-#portf {
-    color: rgb(19, 18, 18);
-    font-size: 60px;
-}
-.card-title {
-    color:#006064;
-    font-family:'Love Ya Like A Sister', cursive;
-    font-size:36px;
-}
-.aboutMeSpans{
-    font-family:'Love Ya Like A Sister';
-    color:#496d77;
-    font-size:25px;
-}
-/* #aboutContacts {
-    background-image: url("../images/paperBackg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-   
-} */
 .googlefont1 {
     /* font-family: 'Gloria Hallelujah', cursive; */
     font-family: 'Love Ya Like A Sister', cursive;
@@ -72,28 +37,65 @@ nav {
     font-size: 20px;
     color: #c1bdbf;
 }
-h4 {
-    color: #c1bdbf;
-}
-.parallax-container {
-    height: 170px;
-}
 li{
     color:black;
     font-size:22px;
 }
+
+/* ===========Styling divs (common features)============= */
 h5, h3 {
     margin-top:30px;
     font-family: 'Love Ya Like A Sister', cursive;
 }
-/* Article */
-.photo {
-    margin-top: 35px;
-    max-width:350px;
+h4 {
+    color: #c1bdbf;
+}
+#aboutMe, #techSk, #portf{
+    font-family:'Love Ya Like A Sister', cursive;
+    color:#212121;
+}
+#aboutMeDiv, #aboutSkills, #aboutExperience, #aboutContacts{
+    margin-top:5px;
+    margin-bottom: 10px;
+    background: #e4e2e2;
+    padding-top:20px;
+    color: #212121;
+    font-size: 20px;
+}
+/* ==============About Anya section===============*/
+.aboutMeSpans{
+    font-family:'Love Ya Like A Sister';
+    color:#496d77;
+    font-size:25px;
+}
+
+/* ==================Portfolio section============== */
+#portf {
+    color: rgb(19, 18, 18);
+    font-size: 60px;
+}
+.card-title {
+    color:#006064;
+    font-family:'Love Ya Like A Sister', cursive;
+    font-size:36px;
+}
+.card{
+    margin-bottom:30px;
+}
+.card-image img {
+    max-width: 100%;
     border-radius: 10px;
 }
 #expBox{
     box-sizing: border-box;
+}
+/* img of girl */
+#expGirl{
+    max-width:100%;
+}
+/* ==========Connect with Anya section===========*/
+#emailImg, #phoneImg, #linkedinImg{
+    opacity:0.5;
 }
 #connect {
     color:black;
@@ -104,23 +106,21 @@ h5, h3 {
     font-size:20px;
     font-family: 'Love Ya Like A Sister', cursive;
 }
-#expGirl{
-    max-width:100%;
-}
 
+/* =========Photos==========*/
+
+.photo {
+    margin-top: 35px;
+    max-width:350px;
+    border-radius: 10px;
+}
 #photo2 {
     margin-top: 35px;
     width:400px;
     border-radius: 10px;
 }
 
-.card{
-    margin-bottom:30px;
-}
-.card-image img {
-    max-width: 100%;
-    border-radius: 10px;
-}
+/* =======Footer========= */
 
 #footer{
     background:#234d53cb;
@@ -128,34 +128,6 @@ h5, h3 {
     position:absolute;
     bottom:0px;
     color:rgba(255, 255, 255, 0.781);
-}
-/* Sidebar
-
-.icon:hover  {
-    border-radius: 100px;
-  }
-
-aside {
-    max-height: 150px;
-}
-
-.icon {
-    max-width: 70px;
-    max-height:70px;
-} */
-
-
-
-
-.myButton:hover {
-    border-radius: 100px;
-}
-
-.myButton {
-    background: #4aaaa5;
-    color: #ffffff;
-    border-radius: 0;
-    border: none;
 }
 
 /* Media Queries for Responsive Photo */
